baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__02_parser__negative.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "Alias"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Holder"
    L_BRACE "{"
    FIELD
      WORD "cb"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          WORD "value"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "int"
          WORD "int"
    FIELD
      WORD "opt_cb"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          TYPE_EXPR
            L_PAREN "("
            FUNCTION_TYPE_PARAM
              WORD "value"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
        R_PAREN ")"
        QUESTION "?"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_annotation"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "f"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    L_PAREN "("
                    FUNCTION_TYPE_PARAM
                      WORD "x"
                      COLON ":"
                      TYPE_EXPR "int"
                        WORD "int"
                    R_PAREN ")"
                    ARROW "->"
                    TYPE_EXPR "int"
                      WORD "int"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ x }"
              L_BRACE "{"
              WORD "x"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "f"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG "1"
              INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "nested_param"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG
              LAMBDA_EXPR
                PARAMETER_LIST
                  L_PAREN "("
                  PARAMETER
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "int"
                  WORD "int"
                BLOCK_EXPR "{ value }"
                  L_BRACE "{"
                  WORD "value"
                  R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "optional_param"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
          R_PAREN ")"
          QUESTION "?"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
  1
}"
        L_BRACE "{"
        INTEGER_LITERAL "1"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "list_param"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cbs"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
          R_PAREN ")"
          L_BRACKET "["
          R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
  0
}"
        L_BRACE "{"
        INTEGER_LITERAL "0"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "returns_fn"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LAMBDA_EXPR
          PARAMETER_LIST
            L_PAREN "("
            PARAMETER
              WORD "value"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          BLOCK_EXPR "{ value }"
            L_BRACE "{"
            WORD "value"
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "lambda_param"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let apply"
              KW_LET "let"
              WORD "apply"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "f"
                COLON ":"
                TYPE_EXPR
                  L_PAREN "("
                  FUNCTION_TYPE_PARAM
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                  ARROW "->"
                  TYPE_EXPR "int"
                    WORD "int"
              COMMA ","
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              CALL_EXPR
                WORD "f"
                CALL_ARGS
                  L_PAREN "("
                  CALL_ARG "x"
                    WORD "x"
                  R_PAREN ")"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "apply"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG
              LAMBDA_EXPR
                PARAMETER_LIST
                  L_PAREN "("
                  PARAMETER
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "int"
                  WORD "int"
                BLOCK_EXPR "{ value }"
                  L_BRACE "{"
                  WORD "value"
                  R_BRACE "}"
            COMMA ","
            CALL_ARG "1"
              INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
