baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__02_parser__positive.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "ExplicitAlias"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "never"
          WORD "never"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "OpenAlias"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "unknown"
          WORD "unknown"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Callbacks"
    L_BRACE "{"
    FIELD
      WORD "on_done"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          WORD "value"
          COLON ":"
          TYPE_EXPR "int"
            WORD "int"
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "int"
          WORD "int"
        THROWS_CLAUSE
          KW_THROWS "throws"
          TYPE_EXPR "never"
            WORD "never"
    FIELD
      WORD "on_skip"
      TYPE_EXPR
        L_PAREN "("
        FUNCTION_TYPE_PARAM
          TYPE_EXPR
            L_PAREN "("
            FUNCTION_TYPE_PARAM
              WORD "value"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "never"
                WORD "never"
        R_PAREN ")"
        QUESTION "?"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "immediate_callback"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            WORD "value"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG "1"
              INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "lambda_explicit_callback"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let apply"
              KW_LET "let"
              WORD "apply"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "f"
                COLON ":"
                TYPE_EXPR
                  L_PAREN "("
                  FUNCTION_TYPE_PARAM
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                  ARROW "->"
                  TYPE_EXPR "int"
                    WORD "int"
                  THROWS_CLAUSE
                    KW_THROWS "throws"
                    TYPE_EXPR "never"
                      WORD "never"
              COMMA ","
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              CALL_EXPR
                WORD "f"
                CALL_ARGS
                  L_PAREN "("
                  CALL_ARG "x"
                    WORD "x"
                  R_PAREN ")"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "apply"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG
              LAMBDA_EXPR
                PARAMETER_LIST
                  L_PAREN "("
                  PARAMETER
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "int"
                  WORD "int"
                BLOCK_EXPR "{ value }"
                  L_BRACE "{"
                  WORD "value"
                  R_BRACE "}"
            COMMA ","
            CALL_ARG "1"
              INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "explicit_nested"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              FUNCTION_TYPE_PARAM
                WORD "value"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              THROWS_CLAUSE
                KW_THROWS "throws"
                TYPE_EXPR "never"
                  WORD "never"
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "cb"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG
              LAMBDA_EXPR
                PARAMETER_LIST
                  L_PAREN "("
                  PARAMETER
                    WORD "value"
                    COLON ":"
                    TYPE_EXPR "int"
                      WORD "int"
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "int"
                  WORD "int"
                BLOCK_EXPR "{ value }"
                  L_BRACE "{"
                  WORD "value"
                  R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "explicit_let"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "f"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    L_PAREN "("
                    FUNCTION_TYPE_PARAM
                      WORD "x"
                      COLON ":"
                      TYPE_EXPR "int"
                        WORD "int"
                    R_PAREN ")"
                    ARROW "->"
                    TYPE_EXPR "int"
                      WORD "int"
                    THROWS_CLAUSE
                      KW_THROWS "throws"
                      TYPE_EXPR "never"
                        WORD "never"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "x"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ x }"
              L_BRACE "{"
              WORD "x"
              R_BRACE "}"
          SEMICOLON ";"
        CALL_EXPR
          WORD "f"
          CALL_ARGS
            L_PAREN "("
            CALL_ARG "1"
              INTEGER_LITERAL "1"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "explicit_return"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        WORD "value"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
      THROWS_CLAUSE
        KW_THROWS "throws"
        TYPE_EXPR "never"
          WORD "never"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LAMBDA_EXPR
          PARAMETER_LIST
            L_PAREN "("
            PARAMETER
              WORD "value"
              COLON ":"
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          BLOCK_EXPR "{ value }"
            L_BRACE "{"
            WORD "value"
            R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
